📝 uv - error: Failed to discover parent workspace

--- a/docs/Language/Python/版本管理工具.md
+++ b/docs/Language/Python/版本管理工具.md
@@ -586,6 +586,8 @@ uv --version
 ```bash
 # 初始化当前项目
 uv init
+## --lib 可以省掉默认生成的 main.py
+uv init --lib
 # 添加包
 uv add ruff
 # 运行检查(不会自动安装缺失的包)
@@ -645,7 +647,21 @@ Audited 1 package in 3ms
 >   - 全局：export UV_LINK_MODE=copy（放入 shell 配置）
 > - Installed 1 package in 33ms 表示最终成功安装 ruff==0.13.2。
 
+---
 
+#### 常见问题
+
+#### error: Failed to discover parent workspace
+
+我们执行 `uv init` 初始化项目时, 由于当前目录下没有 `pyproject.toml`, uv 默认会向上级目录搜索  `pyproject.toml`, 如果此操作不在预期内就容易出问题
+
+![image-20251028111618428](http://cdn.ayusummer233.top/DailyNotes/202510281116938.png)
+
+解决方案为使用 `--no-workspace` 告诉 uv 忽略父级 workspace 的探测
+
+```bash
+uv init --no-workspace
+```
 
 ---
 
