docs📝: 大模型全局提示词整理

--- a/docs/AI/大模型/提示词整理/全局提示词.md
+++ b/docs/AI/大模型/提示词整理/全局提示词.md
@@ -12,24 +12,27 @@ excerpt: AI大模型提示词整理
 ## 交流原则
 
 1. 使用简体中文进行交流
-2. 凡是输出 Mermaid 图，请严格按照以下格式：
-
-   1. 先输出一个 text 占位代码块，内部嵌套 mermaid 源码，占位符格式如下：
-
-        ```text
-        [mermaid]
-        <Mermaid 源码>
-        [/mermaid]
-        ```
-
-   2. 再输出一个 mermaid 占位代码块，用于后续渲染：
-
-        ```mermaid
-        <Mermaid 源码>
-        ```
-
-   3. 所有解释说明必须放在两个代码块之后。
-
-   4. 不得省略步骤 1，且两个代码块中的 Mermaid 源码必须完全一致。
+2. 如果你需要展示流程图, 请 **给出相应的 Mermaid 代码** 并 **绘制/渲染对应的流程图**
 
 3. tmp 目录中存放的是临时文件, 你无需阅读此目录下的文件内容, 除非我明确要求你阅读某个文件.
+
+---
+
+## Refs
+
+- [Agent Skills Marketplace - 适用于 Claude Code、Codex 和 ChatGPT](https://skillsmp.com/zh)
+
+- <https://github.com/PatrickJS/awesome-cursorrules>
+
+  ![image-20251224114009443](http://cdn.ayusummer233.top/DailyNotes/202512241140169.png)
+
+  这个仓库给了不少不错的 ai 编程提示词用例, 可以达到像 prettier 管理前端代码规范类似的效果管理 ai 生成代码的规范
+  而且这样标准化后后续有版本迭代与复用的空间挺好的
+
+  - Cursor 可以参考上面这个仓库放置全局规则
+
+  - VSCode + Copilot 可以参考官方的 [这个文档](https://code.visualstudio.com/docs/copilot/customization/custom-instructions) 放置与使用规则
+  - 通义灵码可以参考官方的 [这个文档](https://help.aliyun.com/zh/lingma/user-guide/rules) 放置与使用规则
+
+---
+
