docs📝: Mermaid提示词优化

--- a/docs/AI/大模型/提示词整理/全局提示词.md
+++ b/docs/AI/大模型/提示词整理/全局提示词.md
@@ -13,6 +13,8 @@ excerpt: AI大模型提示词整理
 
 1. 使用简体中文进行交流
 2. 如果你需要展示流程图, 请 **给出相应的 Mermaid 代码** 并 **绘制/渲染对应的流程图**
+  
+   绘制 Mermaid 图时, 如果节点内容包含特殊字符,例如括号反斜杠之类的,需要为节点内容**整体**加上半角双引号(引号内部内容无需额外操作)以支持 Mermaid 正常渲染
 
 3. tmp 目录中存放的是临时文件, 你无需阅读此目录下的文件内容, 除非我明确要求你阅读某个文件.
 
@@ -35,4 +37,3 @@ excerpt: AI大模型提示词整理
   - 通义灵码可以参考官方的 [这个文档](https://help.aliyun.com/zh/lingma/user-guide/rules) 放置与使用规则
 
 ---
-
