📝 大模型全局提示词 add refs & description

--- a/docs/AI/大模型/提示词整理/全局提示词.md
+++ b/docs/AI/大模型/提示词整理/全局提示词.md
@@ -24,7 +24,9 @@ excerpt: AI大模型提示词整理
 
 - [Agent Skills Marketplace - 适用于 Claude Code、Codex 和 ChatGPT](https://skillsmp.com/zh)
 
-- <https://github.com/PatrickJS/awesome-cursorrules>
+- [一份精选的 Claude 技能、资源和工具列表，用于自定义 Claude AI 工作流程 / github.com/ComposioHQ/awesome-claude-skills](https://github.com/ComposioHQ/awesome-claude-skills)
+
+- [通过自定义规则和行为增强 Cursor AI 编辑器体验的配置文件 / github.com/PatrickJS/awesome-cursorrules](https://github.com/PatrickJS/awesome-cursorrules)
 
   ![image-20251224114009443](http://cdn.ayusummer233.top/DailyNotes/202512241140169.png)
 
