docs📝: add AI Agent Skills refs

--- a/docs/AI/工具与实践/工具与实践.md
+++ b/docs/AI/工具与实践/工具与实践.md
@@ -13,7 +13,15 @@ category:
 
 ---
 
+## Agent Skills
 
+- [Agent Skills Marketplace - 适用于 Claude Code、Codex 和 ChatGPT](https://skillsmp.com/zh)
+
+- [一份精选的 Claude 技能、资源和工具列表，用于自定义 Claude AI 工作流程 / github.com/ComposioHQ/awesome-claude-skills](https://github.com/ComposioHQ/awesome-claude-skills)
+
+- [【多图对比】在CC中用多个Skill从零快速开发较高质量复杂前端](https://linux.do/t/topic/1514133)
+
+---
 
 
 
